NULL pointer dereference on boot with R7 260X
Brief summary of the problem:
Kernel Oopses on boot with a NULL pointer dereference in drivers/gpu/drm/amd/amdgpu/../pm/powerplay/hwmgr/smu7_hwmgr.c:1512
as of agd5f/linux@1497c23e in amd-staging-drm-next.
Hardware description:
- GPU:
08:00.0 VGA compatible controller [0300]: Advanced Micro Devices, Inc. [AMD/ATI] Bonaire XTX [Radeon R7 260X/360] [1002:6658]
Subsystem: PC Partner Limited / Sapphire Technology Bonaire XTX [Radeon R7 260X/360] [174b:e258]
System information:
- Distro name and Version: Ubuntu 20.04.5
- Kernel version: 6.0.0 (agd5f/linux@1497c23e)
- Custom kernel: amd-staging-drm-next
How to reproduce the issue:
Boot the kernel with a similar cmdline:
amdgpu.cik_support=1 radeon.cik_support=0 amdgpu.dc=1